# src/routes/developer.routes.js
@@ -2,19 +2,18 @@ import express from "express";
 import {
   addDeveloper,
   deleteDeveloper,
-  editDeveloper,
   getDeveloperList,
-  getDeveloperProfile,
+  updateDeveloperPatch,
+  updateDeveloperPut,
 } from "../controller/developerController.js";
 const route = express.Router();
-
-
 
 route.post("/", addDeveloper);
 
 route.get("/developerList", getDeveloperList);
-route.get("/profile", getDeveloperProfile);
-route.put("/editProfile", editDeveloper);
+
+route.put("/:id", updateDeveloperPut);
+route.patch("/:id", updateDeveloperPatch);
 route.delete("/", deleteDeveloper);
 
 export const developerRoute = route;
